--- a/manager/src/main/res/layout/tab_font_view.xml
+++ b/manager/src/main/res/layout/tab_font_view.xml
@@ -10,9 +10,9 @@
         android:id="@+id/background"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_margin="@dimen/margin_small"
-        android:stateListAnimator="@animator/list_animator"
-        app:cardCornerRadius="@dimen/radius_default"
+        android:layout_margin="@dimen/margin_small_4dp"
+        android:stateListAnimator="@animator/scale_down_animator"
+        app:cardCornerRadius="@dimen/radius_default_10dp"
         app:cardElevation="0dp"
         app:strokeColor="?android:textColorPrimary"
         app:strokeWidth="2dp">
@@ -23,7 +23,7 @@
             android:layout_height="match_parent"
             android:layout_gravity="center"
             android:gravity="center"
-            android:padding="@dimen/padding_small"
+            android:padding="@dimen/padding_small_8dp"
             android:text="Mm"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
