--- a/manager/src/main/res/layout/style_preview_card.xml
+++ b/manager/src/main/res/layout/style_preview_card.xml
@@ -20,7 +20,7 @@
         <com.ilustris.motiv.base.components.MotivTextView
             android:id="@+id/styleText"
             android:layout_width="match_parent"
-            android:layout_margin="@dimen/margin_default"
+            android:layout_margin="@dimen/margin_default_10dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_centerInParent="true"
